# GeoQuizz

./: .gitignore  Cargo.toml  README.md
assets/: cities.txt
database/: belgium_cities.json  mercator.py  request.py
src/: assets.rs  camera.rs  game.rs  lib.rs  loader.rs  main.rs  types.rs
