[package]
name = "geo_quizz"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17" }
bevy_svg = { version = "0.17.1", default-features = false, features = ["2d","3d"] }
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0"
thiserror = "2"

[features]
debug = [] # Shows city points

[lints.clippy]
type_complexity = "allow"

